change Current Fellows view  to use aggregation and adjust person layout

--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
@@ -258,7 +258,12 @@ content:
     settings:
       size: 60
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      change_labels:
+        field_label_overwrite: '<nolabel>'
+      allowed_formats:
+        hide_help: '0'
+        hide_guidelines: '0'
   su_casbs_person_bio:
     type: text_textarea
     weight: 56
