--- a/docroot/profiles/custom/stanford_profile/config/sync/field.storage.node.su_casbs_custom_order.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.storage.node.su_casbs_custom_order.yml
@@ -3,7 +3,11 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: private
 id: node.su_casbs_custom_order
 field_name: su_casbs_custom_order
 entity_type: node
