--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_fellows.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_fellows.yml
@@ -38,7 +38,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: 'Current Fellows'
+      title: 'Unpublished people'
       fields:
         title:
           id: title
@@ -192,7 +192,7 @@ display:
             operation: view
             transform: false
           break_phrase: false
-          depth: '0'
+          depth: '1'
           use_taxonomy_term_path: false
           vocabularies:
             su_casbs_fellowship_year: su_casbs_fellowship_year
@@ -201,15 +201,42 @@ display:
           id: status
           table: node_field_data
           field: status
+          relationship: none
+          group_type: group
+          admin_label: ''
           entity_type: node
           entity_field: status
           plugin_id: boolean
+          operator: '='
           value: '1'
           group: 1
+          exposed: false
           expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
             operator: ''
             operator_limit_selection: false
             operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
       style:
         type: default
         options:
@@ -450,10 +477,12 @@ display:
             su_casbs_fellowship_year: su_casbs_fellowship_year
       defaults:
         css_class: false
+        group_by: false
         fields: false
         arguments: false
         footer: false
       css_class: casbs-jumpmenu
+      group_by: true
       display_description: ''
       footer:
         area:
@@ -880,14 +909,14 @@ display:
             trim: 0
             preserve_tags: ''
             html: 0
-          element_type: div
-          element_class: casbs_person__image
+          element_type: ''
+          element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: 0
+          element_default_classes: 1
           empty: ''
           hide_empty: 0
           empty_zero: 0
@@ -896,11 +925,12 @@ display:
           type: image
           settings:
             image_style: medium
-            image_link: ''
+            image_link: content
             image_loading:
               attribute: lazy
-          group_column: ''
-          group_columns: {  }
+          group_column: entity_id
+          group_columns:
+            target_id: target_id
           group_rows: true
           delta_limit: 0
           delta_offset: 0
@@ -1119,9 +1149,58 @@ display:
         style: false
         row: false
         fields: false
+        group_by: false
+        arguments: false
       block_description: 'Current Fellows'
       block_category: 'Basic Page Type Lists (Views)'
       display_description: ''
+      group_by: 1
+      arguments:
+        term_node_taxonomy_name_depth:
+          id: term_node_taxonomy_name_depth
+          table: node_field_data
+          field: term_node_taxonomy_name_depth
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: 0
+            title: All
+          title_enable: 0
+          title: ''
+          default_argument_type: raw
+          default_argument_options:
+            index: '0'
+            use_alias: 0
+          default_argument_skip_url: 0
+          summary_options:
+            base_path: ''
+            count: 1
+            override: 0
+            items_per_page: '25'
+          summary:
+            sort_order: asc
+            number_of_records: '0'
+            format: default_summary
+          specify_validation: 1
+          validate:
+            type: taxonomy_term_name
+            fail: 'not found'
+          validate_options:
+            bundles:
+              su_casbs_fellowship_year: su_casbs_fellowship_year
+            access: 0
+            operation: view
+            transform: 0
+          depth: '0'
+          vocabularies:
+            su_casbs_fellowship_year: su_casbs_fellowship_year
+          break_phrase: 1
+          use_taxonomy_term_path: false
+          entity_type: node
+          plugin_id: taxonomy_index_name_depth
     cache_metadata:
       max-age: -1
       contexts:
