change current fellows view to aggregate and group pict by ID

--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_fellows.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_fellows.yml
@@ -38,7 +38,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: 'Unpublished people'
+      title: 'Current Fellows'
       fields:
         title:
           id: title
