casbs_person_bio Aggregation settings to entity ID

--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_fellows.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_fellows.yml
@@ -1115,7 +1115,7 @@ display:
           click_sort_column: value
           type: text_default
           settings: {  }
-          group_column: value
+          group_column: entity_id
           group_columns: {  }
           group_rows: true
           delta_limit: 0
