Updated drupal core to 9.5.11 (#53)

--- a/docroot/modules/custom/stanford_ssp/stanford_ssp.services.yml
+++ b/docroot/modules/custom/stanford_ssp/stanford_ssp.services.yml
@@ -18,6 +18,7 @@ services:
     arguments: ['@simplesamlphp_auth.manager', '@config.factory', '@entity_type.manager', '@logger.channel.simplesamlphp_auth', '@externalauth.externalauth', '@current_user', '@messenger', '@module_handler', '@stanford_ssp.workgroup_api']
   stanford_ssp.event_subscriber:
     class: Drupal\stanford_ssp\EventSubscriber\StanfordSSPEventSubscriber
-    arguments: ['@config.factory', '@current_user']
+    arguments: ['@config.factory', '@current_user', '@path.matcher', '@path.current', '@path_alias.manager']
     tags:
       - { name: event_subscriber }
+
