--- a/composer.json
+++ b/composer.json
@@ -49,9 +49,9 @@
         "drupal/config_update": "^1.7",
         "drupal/confirm_leave": "^1.0@beta",
         "drupal/content_lock": "^2.2",
-        "drupal/core": "~9.5.0",
+        "drupal/core": "9.5.11",
         "drupal/core-composer-scaffold": "^9",
-        "drupal/core-recommended": "^9.0",
+        "drupal/core-recommended": "9.5.11",
         "drupal/default_content": "^2.0@alpha",
         "drupal/devel": "^5.1",
         "drupal/devel_php": "^1.5",
@@ -156,7 +156,7 @@
         "su-sws/stanford_media": "^9.0",
         "su-sws/stanford_migrate": "^8.3",
         "su-sws/stanford_profile_helper": "dev-core-9.5.0",
-        "su-sws/stanford_ssp": "^8.2"
+        "su-sws/stanford_ssp": "^8.3"
     },
     "require-dev": {
         "acquia/blt-drupal-test": "^1.0",
