--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
@@ -385,6 +385,23 @@ hidden:
   path: true
   promote: true
   sticky: true
+  su_casbs_cs_year: true
+  su_casbs_current_affiliation: true
+  su_casbs_custom_order: true
+  su_casbs_faculty_fellow_year: true
+  su_casbs_feature_people: true
+  su_casbs_feature_people_text: true
+  su_casbs_fellow_year: true
+  su_casbs_field_discipline: true
+  su_casbs_person_bio: true
+  su_casbs_person_book_links: true
+  su_casbs_person_id: true
+  su_casbs_person_journal_links: true
+  su_casbs_person_type: true
+  su_casbs_practitioner_year: true
+  su_casbs_profile_picture: true
+  su_casbs_ra_year: true
+  su_casbs_visiting_scholar_year: true
   su_person_academic_appt: true
   su_person_admin_appts: true
   su_person_research_interests: true
