scrubbed field_menulink references

--- a/docroot/profiles/custom/stanford_profile/config/sync/filter.format.stanford_html.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/filter.format.stanford_html.yml
@@ -17,7 +17,6 @@ dependencies:
     - media
     - responsive_tables_filter
     - stanford_media
-    - stanford_profile_helper
 name: HTML
 format: stanford_html
 weight: 0
@@ -65,7 +64,7 @@ filters:
   filter_htmlcorrector:
     id: filter_htmlcorrector
     provider: filter
-    status: true
+    status: false
     weight: -43
     settings: {  }
   filter_autop:
@@ -129,9 +128,3 @@ filters:
     settings:
       tablesaw_type: stack
       tablesaw_persist: '1'
-  su_clean_html:
-    id: su_clean_html
-    provider: stanford_profile_helper
-    status: true
-    weight: 99
-    settings: {  }
