--- a/docroot/profiles/custom/stanford_profile/config/sync/filter.format.stanford_minimal_html.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/filter.format.stanford_minimal_html.yml
@@ -3,8 +3,10 @@ langcode: en
 status: true
 dependencies:
   module:
+    - editor
     - linkit
     - mathjax
+    - media
     - responsive_tables_filter
     - stanford_media
     - stanford_profile_helper
@@ -16,7 +18,7 @@ filters:
     id: filter_html
     provider: filter
     status: true
-    weight: 0
+    weight: -50
     settings:
       allowed_html: '<br> <p id class> <a class aria-label hreflang data-entity-substitution data-entity-type data-entity-uuid title id href> <h2 id class> <h3 id class> <h4 id class> <h5 id class> <h6 id class> <cite> <dd> <div id class> <blockquote cite> <strong> <em> <code> <ul> <ol reversed start> <li>'
       filter_html_help: true
@@ -25,20 +27,20 @@ filters:
     id: filter_htmlcorrector
     provider: filter
     status: true
-    weight: -10
+    weight: -48
     settings: {  }
   linkit:
     id: linkit
     provider: linkit
     status: true
-    weight: 10
+    weight: -49
     settings:
       title: true
   filter_responsive_tables_filter:
     id: filter_responsive_tables_filter
     provider: responsive_tables_filter
     status: false
-    weight: 0
+    weight: -39
     settings:
       tablesaw_type: stack
       tablesaw_persist: '1'
@@ -46,29 +48,69 @@ filters:
     id: filter_html_image_secure
     provider: filter
     status: false
-    weight: 50
+    weight: -37
     settings: {  }
   filter_html_escape:
     id: filter_html_escape
     provider: filter
     status: false
-    weight: 0
+    weight: -41
     settings: {  }
   filter_mathjax:
     id: filter_mathjax
     provider: mathjax
     status: false
-    weight: -50
+    weight: -46
     settings: {  }
   stanford_media_embed_markup:
     id: stanford_media_embed_markup
     provider: stanford_media
     status: false
-    weight: 9
+    weight: -38
     settings: {  }
   su_clean_html:
     id: su_clean_html
     provider: stanford_profile_helper
     status: true
-    weight: 99
+    weight: -47
     settings: {  }
+  editor_file_reference:
+    id: editor_file_reference
+    provider: editor
+    status: false
+    weight: -45
+    settings: {  }
+  filter_align:
+    id: filter_align
+    provider: filter
+    status: false
+    weight: -44
+    settings: {  }
+  filter_url:
+    id: filter_url
+    provider: filter
+    status: false
+    weight: -40
+    settings:
+      filter_url_length: 72
+  filter_autop:
+    id: filter_autop
+    provider: filter
+    status: false
+    weight: -43
+    settings: {  }
+  filter_caption:
+    id: filter_caption
+    provider: filter
+    status: false
+    weight: -42
+    settings: {  }
+  media_embed:
+    id: media_embed
+    provider: media
+    status: false
+    weight: -36
+    settings:
+      default_view_mode: default
+      allowed_view_modes: {  }
+      allowed_media_types: {  }
