--- a/docroot/profiles/custom/stanford_profile/config/sync/user.role.authenticated.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/user.role.authenticated.yml
@@ -2,8 +2,11 @@ uuid: ccb69bd8-1bb9-4122-861e-0d75be7eb22d
 langcode: en
 status: true
 dependencies:
+  config:
+    - filter.format.stanford_minimal_html
   module:
     - field_permissions
+    - filter
     - media
     - printable
     - shortcut
@@ -22,6 +25,7 @@ permissions:
   - 'access patterns page'
   - 'access shortcuts'
   - 'issue subrequests'
+  - 'use text format stanford_minimal_html'
   - 'view field_media_embeddable_code'
   - 'view media'
   - 'view own field_media_embeddable_code'
