--- a/composer.json
+++ b/composer.json
@@ -144,7 +144,7 @@
         "seboettg/citeproc-php": "2.4.1",
         "simplesamlphp/simplesamlphp": "^1.19",
         "su-sws/ckeditor5_plugins": "^1.0",
-        "su-sws/drupal-patches": "^8.1",
+        "su-sws/drupal-patches": "^8.2",
         "su-sws/react_paragraphs": "^8.2",
         "su-sws/stanford_actions": "^8.2",
         "su-sws/stanford_fields": "^8.2",
@@ -272,7 +272,7 @@
                 "http://github.com/ckeditor/ckeditor4/pull/3965": "patches/libraries/ckeditor-plugin-link-anchor-id.patch",
                 "Disable double click double modal": "patches/libraries/ckeditor-plugin-link-disable-double.patch"
             },
-            "drupal/core": {
+"drupal/core": {
                 "https://www.drupal.org/project/drupal/issues/3151977": "patches/media-recursion-limit.patch"
             },
             "drupal/paranoia": {
@@ -290,14 +290,18 @@
             "drupal/menu_block": {
                 "https://www.drupal.org/project/menu_block/issues/3271218": "https://www.drupal.org/files/issues/2022-04-29/menu_block_rendered_empty-3271218-17.patch"
             },
-            "drupal/menu_link": {
-                "https://www.drupal.org/project/menu_link/issues/3358081": "https://git.drupalcode.org/project/menu_link/-/merge_requests/9.patch"
-            },
-            "drupal/menu_link_weight": {
-                "https://www.drupal.org/project/menu_link_weight/issues/2875984": "https://git.drupalcode.org/project/menu_link_weight/-/merge_requests/2.diff"
-            },
             "drupal/google_tag": {
                 "Comment out GA conflict in Google Tag": "patches/contrib/google_tag-ga_conflict.patch"
+            },
+            "drupal/menu_link": {
+                "https://www.drupal.org/project/menu_link/issues/3145735": "https://www.drupal.org/files/issues/2022-03-22/menu_link-empty-entity-error-3145735-7.patch",
+                "https://www.drupal.org/project/menu_link/issues/3092282": "https://git.drupalcode.org/project/menu_link/-/merge_requests/8.patch"
+            },
+            "drupal/menu_link_weight": {
+                "https://www.drupal.org/project/menu_link_weight/issues/3099139": "https://www.drupal.org/files/issues/2019-12-05/menu_link_weight-target_blank-3099139.patch"
+            },
+            "drupal/google_analytics": {
+                "https://www.drupal.org/project/google_analytics/issues/3373921": "https://www.drupal.org/files/issues/2023-08-07/google-analytics-issues-3373921-cannot-install-from-existing-config-11.patch"
             }
         }
     },
@@ -321,6 +325,9 @@
         "sync-casbs": [
             "drush -y sql:sync @default.prod @default.local",
             "drush -y rsync @default.prod:%files @default.local:%files"
+        ],
+        "sync-db": [
+            "drush -y sql:sync @default.prod @default.local"
         ]
     }
 }
