--- a/composer.json
+++ b/composer.json
@@ -327,7 +327,7 @@
             "drush -y rsync @default.prod:%files @default.local:%files"
         ],
         "sync-db": [
-            "drush -y sql:sync @default.prod @default.local"
+            "drush -y sql:sync @default.dev @default.local"
         ]
     }
 }
