tinker with auth for api access

--- a/docroot/profiles/custom/stanford_profile/config/sync/seckit.settings.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/seckit.settings.yml
@@ -10,6 +10,7 @@ seckit_xss:
     default-src: ''
     script-src: ''
     object-src: ''
+    style-src: ''
     img-src: ''
     media-src: ''
     frame-src: ''
