--- a/docroot/profiles/custom/stanford_profile/config/sync/samlauth.authentication.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/samlauth.authentication.yml
@@ -9,7 +9,9 @@ error_throw: false
 local_login_saml_error: false
 logout_different_user: false
 drupal_login_roles:
-  administrator: '0'
+  administrator: administrator
+  site_developer: site_developer
+  decoupled_site_users: decoupled_site_users
   authenticated: '0'
   stanford_faculty: '0'
   stanford_staff: '0'
@@ -18,9 +20,8 @@ drupal_login_roles:
   site_manager: '0'
   site_editor: '0'
   site_builder: '0'
-  site_developer: '0'
   layout_builder_user: '0'
-  decoupled_site_users: '0'
+  su_site_embedder: '0'
 sp_entity_id: ''
 sp_name_id_format: 'urn:oasis:names:tc:SAML:2.0:nameid-format:transient'
 sp_x509_certificate: ''
