--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_fellows.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_current_fellows.yml
@@ -54,36 +54,18 @@ display:
           exclude: false
           alter:
             alter_text: false
-            text: ''
             make_link: false
-            path: ''
             absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
             word_boundary: false
             ellipsis: false
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
             strip_tags: false
             trim: false
-            preserve_tags: ''
             html: false
           element_type: ''
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -94,7 +76,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: false
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -292,7 +274,6 @@ display:
           required: true
           vids:
             - su_casbs_fellowship_year
-      group_by: true
       header: {  }
       footer: {  }
       display_extenders: {  }
@@ -762,81 +743,6 @@ display:
     position: 2
     display_options:
       display_extenders: {  }
-      pager:
-        type: none
-        options:
-          offset: 0
-      style:
-        type: default
-        options:
-          grouping: {  }
-          row_class: casbs_person
-          default_row_class: 0
-      row:
-        type: fields
-        options:
-          default_field_elements: true
-          inline:
-            su_casbs_profile_picture: su_casbs_profile_picture
-          separator: ''
-          hide_empty: true
-      defaults:
-        pager: false
-        style: false
-        row: false
-        fields: false
-        group_by: false
-        arguments: false
-      block_description: 'Current Fellows'
-      block_category: 'Basic Page Type Lists (Views)'
-      display_description: ''
-      group_by: 1
-      arguments:
-        term_node_taxonomy_name_depth:
-          id: term_node_taxonomy_name_depth
-          table: node_field_data
-          field: term_node_taxonomy_name_depth
-          relationship: none
-          group_type: group
-          admin_label: ''
-          default_action: default
-          exception:
-            value: all
-            title_enable: 0
-            title: All
-          title_enable: 0
-          title: ''
-          default_argument_type: raw
-          default_argument_options:
-            index: '0'
-            use_alias: 0
-          default_argument_skip_url: 0
-          summary_options:
-            base_path: ''
-            count: 1
-            override: 0
-            items_per_page: '25'
-          summary:
-            sort_order: asc
-            number_of_records: '0'
-            format: default_summary
-          specify_validation: 1
-          validate:
-            type: taxonomy_term_name
-            fail: 'not found'
-          validate_options:
-            bundles:
-              su_casbs_fellowship_year: su_casbs_fellowship_year
-            access: 0
-            operation: view
-            transform: 0
-          depth: '0'
-          vocabularies:
-            su_casbs_fellowship_year: su_casbs_fellowship_year
-          break_phrase: 1
-          use_taxonomy_term_path: false
-          entity_type: node
-          plugin_id: taxonomy_index_name_depth
       fields:
         view_node:
           id: view_node
@@ -850,7 +756,7 @@ display:
           alter:
             alter_text: 0
             text: ''
-            make_link: 1
+            make_link: 0
             path: ''
             absolute: 0
             external: false
@@ -902,9 +808,9 @@ display:
           exclude: 0
           alter:
             alter_text: 1
-            text: "<a href=\"{{view_node}}\">{{ title }} </a>\r\n"
+            text: '<a href="{{view_node}}">{{ title }} </a>'
             make_link: 0
-            path: '{{view_node}}'
+            path: ''
             absolute: 0
             external: 0
             replace_spaces: 0
@@ -918,8 +824,8 @@ display:
             target: ''
             nl2br: 0
             max_length: '0'
-            word_boundary: 0
-            ellipsis: 0
+            word_boundary: 1
+            ellipsis: 1
             more_link: 0
             more_link_text: ''
             more_link_path: ''
@@ -927,14 +833,14 @@ display:
             trim: 0
             preserve_tags: ''
             html: 0
-          element_type: ''
-          element_class: ''
+          element_type: div
+          element_class: casbs_person__name
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: 1
+          element_default_classes: 0
           empty: ''
           hide_empty: 0
           empty_zero: 0
@@ -953,8 +859,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: 0
-          entity_type: node
-          entity_field: title
           plugin_id: field
         nid:
           id: nid
@@ -1125,14 +1029,14 @@ display:
             trim: 0
             preserve_tags: ''
             html: 0
-          element_type: ''
-          element_class: ''
+          element_type: div
+          element_class: casbs_person__discipline
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: 1
+          element_default_classes: 0
           empty: ''
           hide_empty: 0
           empty_zero: 0
@@ -1250,13 +1154,13 @@ display:
             preserve_tags: ''
             html: 0
           element_type: div
-          element_class: casbs-person__bio
+          element_class: casbs_person__bio
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: 1
+          element_default_classes: 0
           empty: ''
           hide_empty: 0
           empty_zero: 0
@@ -1275,6 +1179,81 @@ display:
           separator: ', '
           field_api_classes: 0
           plugin_id: field
+      pager:
+        type: none
+        options:
+          offset: 0
+      style:
+        type: default
+        options:
+          grouping: {  }
+          row_class: casbs_person
+          default_row_class: 0
+      row:
+        type: fields
+        options:
+          default_field_elements: true
+          inline:
+            su_casbs_profile_picture: su_casbs_profile_picture
+          separator: ''
+          hide_empty: true
+      defaults:
+        pager: false
+        style: false
+        row: false
+        fields: false
+        group_by: false
+        arguments: false
+      block_description: 'Current Fellows'
+      block_category: 'Basic Page Type Lists (Views)'
+      display_description: ''
+      group_by: 1
+      arguments:
+        term_node_taxonomy_name_depth:
+          id: term_node_taxonomy_name_depth
+          table: node_field_data
+          field: term_node_taxonomy_name_depth
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: 0
+            title: All
+          title_enable: 0
+          title: ''
+          default_argument_type: raw
+          default_argument_options:
+            index: '0'
+            use_alias: 0
+          default_argument_skip_url: 0
+          summary_options:
+            base_path: ''
+            count: 1
+            override: 0
+            items_per_page: '25'
+          summary:
+            sort_order: asc
+            number_of_records: '0'
+            format: default_summary
+          specify_validation: 1
+          validate:
+            type: taxonomy_term_name
+            fail: 'not found'
+          validate_options:
+            bundles:
+              su_casbs_fellowship_year: su_casbs_fellowship_year
+            access: 0
+            operation: view
+            transform: 0
+          depth: '0'
+          vocabularies:
+            su_casbs_fellowship_year: su_casbs_fellowship_year
+          break_phrase: 1
+          use_taxonomy_term_path: false
+          entity_type: node
+          plugin_id: taxonomy_index_name_depth
     cache_metadata:
       max-age: -1
       contexts:
@@ -1533,9 +1512,8 @@ display:
             image_link: ''
             image_loading:
               attribute: lazy
-          group_column: entity_id
-          group_columns:
-            target_id: target_id
+          group_column: ''
+          group_columns: {  }
           group_rows: true
           delta_limit: 0
           delta_offset: 0
@@ -1720,7 +1698,7 @@ display:
           click_sort_column: value
           type: text_default
           settings: {  }
-          group_column: entity_id
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -2088,9 +2066,8 @@ display:
             image_link: ''
             image_loading:
               attribute: lazy
-          group_column: entity_id
-          group_columns:
-            target_id: target_id
+          group_column: ''
+          group_columns: {  }
           group_rows: true
           delta_limit: 0
           delta_offset: 0
@@ -2275,7 +2252,7 @@ display:
           click_sort_column: value
           type: text_default
           settings: {  }
-          group_column: entity_id
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -2579,9 +2556,8 @@ display:
             image_link: ''
             image_loading:
               attribute: lazy
-          group_column: entity_id
-          group_columns:
-            target_id: target_id
+          group_column: ''
+          group_columns: {  }
           group_rows: true
           delta_limit: 0
           delta_offset: 0
@@ -2766,7 +2742,7 @@ display:
           click_sort_column: value
           type: text_default
           settings: {  }
-          group_column: entity_id
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -3217,9 +3193,8 @@ display:
             image_link: ''
             image_loading:
               attribute: lazy
-          group_column: entity_id
-          group_columns:
-            target_id: target_id
+          group_column: ''
+          group_columns: {  }
           group_rows: true
           delta_limit: 0
           delta_offset: 0
@@ -3591,7 +3566,7 @@ display:
           click_sort_column: value
           type: text_default
           settings: {  }
-          group_column: entity_id
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -4045,9 +4020,8 @@ display:
             image_link: ''
             image_loading:
               attribute: lazy
-          group_column: entity_id
-          group_columns:
-            target_id: target_id
+          group_column: ''
+          group_columns: {  }
           group_rows: true
           delta_limit: 0
           delta_offset: 0
@@ -4170,7 +4144,7 @@ display:
           click_sort_column: value
           type: text_default
           settings: {  }
-          group_column: entity_id
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
