--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.stanford_person.default.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_view_display.node.stanford_person.default.yml
@@ -306,12 +306,10 @@ third_party_settings:
                 entity: layout_builder.entity
                 view_mode: view_mode
               formatter:
-                type: entity_reference_list_label_class
+                type: entity_reference_label
                 label: hidden
                 settings:
                   link: false
-                  class: ''
-                  list_type: ul
                 third_party_settings:
                   empty_fields:
                     handler: ''
@@ -331,12 +329,10 @@ third_party_settings:
                 entity: layout_builder.entity
                 view_mode: view_mode
               formatter:
-                type: entity_reference_list_label_class
+                type: entity_reference_label
                 label: hidden
                 settings:
                   link: false
-                  class: ''
-                  list_type: ul
                 third_party_settings:
                   empty_fields:
                     handler: ''
@@ -356,12 +352,10 @@ third_party_settings:
                 entity: layout_builder.entity
                 view_mode: view_mode
               formatter:
-                type: entity_reference_list_label_class
+                type: entity_reference_label
                 label: hidden
                 settings:
                   link: false
-                  class: ''
-                  list_type: ul
                 third_party_settings:
                   empty_fields:
                     handler: ''
@@ -381,12 +375,10 @@ third_party_settings:
                 entity: layout_builder.entity
                 view_mode: view_mode
               formatter:
-                type: entity_reference_list_label_class
+                type: entity_reference_label
                 label: hidden
                 settings:
                   link: false
-                  class: ''
-                  list_type: ul
                 third_party_settings:
                   empty_fields:
                     handler: ''
@@ -406,12 +398,10 @@ third_party_settings:
                 entity: layout_builder.entity
                 view_mode: view_mode
               formatter:
-                type: entity_reference_list_label_class
+                type: entity_reference_label
                 label: hidden
                 settings:
                   link: false
-                  class: ''
-                  list_type: ul
                 third_party_settings:
                   empty_fields:
                     handler: ''
@@ -478,7 +468,7 @@ third_party_settings:
                 type: entity_reference_label
                 label: hidden
                 settings:
-                  link_to_entity: false
+                  link: false
                 third_party_settings:
                   empty_fields:
                     handler: ''
@@ -507,23 +497,6 @@ third_party_settings:
                   field_formatter_class:
                     class: ''
             weight: 1
-            additional: {  }
-          27ccdffb-36e3-4297-9a1c-9a93b0c8e60a:
-            uuid: 27ccdffb-36e3-4297-9a1c-9a93b0c8e60a
-            region: content
-            configuration:
-              id: 'field_block:node:stanford_person:su_casbs_custom_order'
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              formatter:
-                type: number_integer
-                label: above
-                settings:
-                  thousand_separator: ''
-                  prefix_suffix: true
-                third_party_settings: {  }
-            weight: 4
             additional: {  }
         third_party_settings: {  }
       -
